add a popup overlay and trigger button

--- a/CSS_tricks/index.html
+++ b/CSS_tricks/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,700,0,0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,700,0,0" />
     <title>Document</title>
   </head>
   <body>
@@ -25,12 +25,20 @@
     <main>
       <section id="projects">
         <h2>Projects</h2>
+        <button class="modal_button">Open modal</button>
+        <div class="overlay">
+          <div class="modal">
+            <h2>Modal</h2>
+            <button class="material-symbols-outlined">close</button>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam nobis iure obcaecati illum, cum dolore quam earum numquam voluptatem, officia optio atque corrupti labore repudiandae cupiditate, distinctio ad magnam fugit. Doloremque officia quis at consequatur alias magni dignissimos tenetur repellendus dicta sapiente, optio magnam, soluta maiores suscipit ducimus, molestiae expedita praesentium atque rerum eligendi. A dolore repellat nisi similique maiores at, rerum veniam consectetur iste numquam quia incidunt nemo dignissimos eveniet nam quas placeat inventore voluptatibus possimus doloremque quidem quae. Quaerat eligendi praesentium vero. Voluptates, at! Minima architecto fugit, excepturi numquam porro veritatis voluptatum harum sequi, qui voluptates in. Iure!</p>
+          </div>
+        </div>
       </section>
-      <section>
+      <section id="about">
         <h2>About</h2>
-      </section id="about">
-      <section id="projects2">
-        <h2>Projects</h2>
+      </section>
+      <section id="skills">
+        <h2>Skills</h2>
       </section>
     </main>
     <footer id="contact">
