completed about me sections, add smooth scrolling

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -124,10 +124,14 @@
 
       <!--About me section-->
       <section id="about_me">
-        <img src="images/profile_picture_2.webp" atl="Picture of me" />
+        <img class="about_me_img" src="images/profile_picture_2.webp" atl="Picture of me" />
         <container>
           <h2>About me</h2>
-          <p>I am a Full-stack web developer based in Helsinki, Finland with 2 years experiences in CMS development and front-end development. I am currently pursuing the Front-end developer - React, Drupal at Business College Helsinki. I am looking for an internship / traineeship / junior software developer position.</p>
+          <p>
+            - I am a <strong>Full-stack web developer </strong>based in Helsinki, Finland with <strong>2 years</strong> experiences with <strong>CMS</strong> and <strong>front-end</strong> development.<br />
+            - I am currently pursuing the Full-stack developer - React, Drupal at <strong>Business College Helsinki</strong>.<br />
+            - I am looking for an internship / traineeship / junior software developer position.
+          </p>
           <button class="contact_button">
             <img src="images/icon_click.png" alt="Contact button" />
             <span>Get in touch</span>
