completed resume section

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -141,58 +141,61 @@
       <!--End of about me section-->
 
       <!--Resume section-->
+      <h2>My resume</h2>
       <section id="resume">
-        <h2>My resume</h2>
         <container>
           <div class="resume_card">
             <div class="resume_header">
               <div>
-                <div>
+                <div class="resume_logo_container">
                   <img src="images/logo_business_college.png" alt="Business College Helsinki logo" />
-                  <p>Business College Helsinki</p>
+                  <p>
+                    Business College<br />
+                    Helsinki
+                  </p>
                 </div>
                 <p>01/24 - 12/24</p>
               </div>
-              <h2>Full-stack Developer - React, Drupal</h2>
+              <h4>Full-stack Developer - React, Drupal</h4>
             </div>
             <div class="resume_main">
               <p>
-                Front-end programming: HTML, CSS, Javascript, React.<br />
-                Back-end programming: PHP, SQL, Symfony, Drupal.<br />
-                Software development team: Git, Agile methods.
+                - Front-end: HTML, CSS, Javascript, React.<br />
+                - Back-end: PHP, SQL, Symfony, Drupal.<br />
+                - Software development team: Git, Agile methods.
               </p>
             </div>
           </div>
           <div class="resume_card">
             <div class="resume_header">
               <div>
-                <div>
+                <div class="resume_logo_container">
                   <img src="images/logo_laurea.png" alt="Laurea UAS logo" />
                   <p>Laurea UAS</p>
                 </div>
                 <p>2016 - 2021</p>
               </div>
-              <h2>BBA, Business information technology</h2>
+              <h4>BBA, Business information technology</h4>
             </div>
             <div class="resume_main">
               <p>
-                Front-end programming: HTML, CSS, Typescript, Angular, Wordpress.<br />
-                Back-end and databases: PHP, mySQL.<br />
-                Web design and Digital Marketing.<br />
-                Management science.
+                - Front-end: HTML, CSS, Typescript, Angular, Wordpress.<br />
+                - Back-end: PHP, mySQL.<br />
+                - Web design and Digital Marketing.<br />
+                - Management science.
               </p>
             </div>
           </div>
           <div class="resume_card">
             <div class="resume_header">
               <div>
-                <div>
+                <div class="resume_logo_container">
                   <img src="images/logo_cawash.svg" alt="Carwash Suomi logo" />
                   <p>Carwash Suomi</p>
                 </div>
                 <p>2021 - 2022</p>
               </div>
-              <h2>Front-end developer</h2>
+              <h4>Front-end developer</h4>
             </div>
             <div class="resume_main">
               <p>
@@ -205,19 +208,23 @@
           <div class="resume_card">
             <div class="resume_header">
               <div>
-                <div>
+                <div class="resume_logo_container">
                   <img src="images/logo_wordpress.png" alt="WordPress placeholder logo" />
                   <p>BKIT Vietnam</p>
                 </div>
                 <p>2019</p>
               </div>
-              <h2>WordPress web developer</h2>
+              <h4>WordPress web developer</h4>
             </div>
             <div class="resume_main">
-              <p>- WordPress web projects assistant. - Maintain and update clients' WordPress sites.</p>
+              <p>
+                - WordPress web projects assistant.<br />
+                - Maintain and update clients' WordPress sites.
+              </p>
             </div>
           </div>
         </container>
+        <div class="resume_decoration"></div>
       </section>
       <!--End of resume section-->
 
