added projects sections

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -5,6 +5,7 @@
     <title>Alex's portfolio</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
   </head>
 
   <body>
@@ -229,36 +230,52 @@
       <!--End of resume section-->
 
       <!--Projects section-->
+      <h2>Take a look at my projects</h2>
       <section id="projects">
-        <h2>Take a look at my projects</h2>
         <container>
           <div>
-            <div class="project_preview_container">
-              <img src="" alt="" />
+            <img src="" alt="" />
+            <div class="projects_main">
+              <div class="project_link">
+                <h4>
+                  Carwash.fi
+                  <span class="material-symbols-outlined"> open_in_new</span>
+                </h4>
+              </div>
+              <p><strong>["HTML", "CSS", "Javascript"]</strong></p>
+              <p><strong>Description:</strong> A marketing page I made for the Carwash Suomi franchise.</p>
+              <p><strong>Feature:</strong> Landings page for each carwash store with marketing information and a booking system. A hub to browse all carwash stores.</p>
             </div>
-            <h5>Projects</h5>
-            <p>Description</p>
           </div>
           <div>
-            <div class="project_preview_container">
-              <img src="" alt="" />
+            <img src="" alt="" />
+            <div class="projects_main">
+              <div>
+                <h4>Cars database</h4>
+                <a href="http://">View Github</a>
+              </div>
+              <p><strong>["HTML", "CSS", "Javascript"]</strong></p>
+              <p><strong>Description:</strong> A page to store and search for cars infos</p>
+              <p><strong>Feature:</strong> Add, store and read car infos from JSON file. Search for a car using any info field</p>
             </div>
-            <h5>Projects</h5>
-            <p>Description</p>
           </div>
           <div>
-            <div class="project_preview_container">
-              <img src="" alt="" />
+            <img src="" alt="" />
+            <div class="projects_main">
+              <h4>Carwash.fi</h4>
+              <p><strong>["HTML/CSS", "Javascript"]</strong></p>
+              <p><strong>Description:</strong> A marketing page I made for the Carwash Suomi franchise.</p>
+              <p><strong>Feature:</strong> Landings page for each carwash store with marketing information and a booking system. A hub to browse all carwash stores.</p>
             </div>
-            <h5>Projects</h5>
-            <p>Description</p>
           </div>
           <div>
-            <div class="project_preview_container">
-              <img src="" alt="" />
+            <img src="" alt="" />
+            <div class="projects_main">
+              <h4>Carwash.fi</h4>
+              <p><strong>["HTML/CSS", "Javascript"]</strong></p>
+              <p><strong>Description:</strong> A marketing page I made for the Carwash Suomi franchise.</p>
+              <p><strong>Feature:</strong> Landings page for each carwash store with marketing information and a booking system. A hub to browse all carwash stores.</p>
             </div>
-            <h5>Projects</h5>
-            <p>Description</p>
           </div>
         </container>
       </section>
